Fix:Added overflow css to homepage

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -85,6 +85,7 @@
 /**Home page**/
 .home-page {
     min-height: 85vh;
+    overflow-x: hidden;
 
 }
 
